# cv

first_task/: CMakeLists.txt  NoisesRemover.cpp  NoisesRemover.h  PencilFinder.cpp  PencilFinder.h  binarize.cpp  binarize.h  main.cpp
second_task/: CMakeLists.txt  main.cpp
third_task/: data.csv  task.ipynb
third_task/.ipynb_checkpoints/: task-checkpoint.ipynb
